# emotion-bert

./: .gitignore  .gitmodules  Dockerfile  README.md  data.py  docker-compose.yaml  main.py  model.py  pyproject.toml  requirements.txt  setup.sh  train.py  utils.py
config/: default.yml  go-emotion-glove.yaml  go-emotion-gru.yaml  go-emotion-pool-default.yaml  go-emotion-pool.yaml  variant_gru_mini.yaml  variant_gru_small.yaml  variant_pool_mini.yaml  variant_pool_small.yaml
emotion_bert/config/: __init__.py  types.py
inputs/: .gitkeep
notebooks/: Untitled0.ipynb  __BERT - Copy.ipynb  __Copy_of_bert_tf (1).ipynb  __tarara.ipynb  __tweet-emotions-analysis-using-lstm-glove-roberta.ipynb  go-emotion-gru.py  go-emotion-pool.py  library_utils.ipynb  main_bert_dense.ipynb  main_bert_gru.ipynb  main_config_writer.ipynb  main_glove_gru.ipynb  main_glove_lstm.ipynb  main_prepare_dataset.ipynb  model.py  view_analysis.ipynb  view_go_emotions_dataset.ipynb  view_model_analysis.ipynb
notebooks/.ipynb_checkpoints/: config_modules-checkpoint.ipynb  library_utils-checkpoint.ipynb  main_prepare_dataset-checkpoint.ipynb
report/: conference_101719.tex  main.bib
tests/: test_setup.py
